[package]
name = "rs-sort-uniq-count"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.serde]
version = "1.0.217"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1.0.137"
default-features = false
features = [
	"std",
]
