[package]
name = "rs-sort-uniq-count"
version = "0.1.0"
edition = "2021"

description = "fast sort & uniq & count(like sort | uniq -c) using 1/10 ram"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-sort-uniq-count/latest"
repository = "https://github.com/takanoriyanagitani/rs-sort-uniq-count"
keywords = [
        "sort",
        "uniq",
        "count",
        "unique",
]
categories = [
        "command-line-interface",
        "command-line-utilities",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.serde]
version = "1.0.217"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1.0.137"
default-features = false
features = [
	"std",
]
